Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86030

Qt Assistant QMultiMap compiler errors

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 6.1.0 RC
    • 6.0
    • Tools: Assistant
    • None
    • 72a6236185fe6884b7b30c4f348a19e2e7603cba (qt/qttools/dev)

    Description

      C:\dev\qt\dev\src\qttools\src\assistant\help\qhelpcollectionhandler.cpp(2360): error C2440: 'static_cast': cannot convert from 'QMap<QString,QUrl>' to 'QMultiMap<Key,T> &'
              with
              [
                  Key=QString,
                  T=QUrl
              ]
      C:\dev\qt\dev\src\qttools\src\assistant\help\qhelpcollectionhandler.cpp(2360): note: static_cast and safe_cast to reference can only be used for valid initializations or for lvalue casts between related classes
      C:\dev\qt\dev\src\qttools\src\assistant\help\qhelpcollectionhandler.cpp(2400): error C2440: 'static_cast': cannot convert from 'QMap<QString,QUrl>' to 'QMultiMap<Key,T> &'
              with
              [
                  Key=QString,
                  T=QUrl
              ]
      C:\dev\qt\dev\src\qttools\src\assistant\help\qhelpcollectionhandler.cpp(2400): note: static_cast and safe_cast to reference can only be used for valid initializations or for lvalue casts between related classes
      [
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kkohne Kai Köhne
              kkohne Kai Köhne
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes