Assistant: Fix compilation issues with QMultiMap

Fixes: QTBUG-86030
Change-Id: I87387a795dbf6609d8f22a84d93f95d68bbb646e
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>