src/assistant/help/qhelpindexwidget.h
@@ -65,7 +65,7 @@ public:
 
 #if QT_DEPRECATED_SINCE(5, 15)
     QT_DEPRECATED_X("Use QHelpEngineCore::documentsForKeyword() instead")
-    QMap<QString, QUrl> linksForKeyword(const QString &keyword) const;
+    QMultiMap<QString, QUrl> linksForKeyword(const QString &keyword) const;
 #endif
     bool isCreatingIndex() const;
     QHelpEngineCore *helpEngine() const;
@@ -95,8 +95,7 @@ Q_SIGNALS:
     QT_DEPRECATED_X("Use documentActivated() instead")
     void linkActivated(const QUrl &link, const QString &keyword);
     QT_DEPRECATED_X("Use documentsActivated() instead")
-    void linksActivated(const QMap<QString, QUrl> &links,
-        const QString &keyword);
+    void linksActivated(const QMultiMap<QString, QUrl> &links, const QString &keyword);
 #endif
     void documentActivated(const QHelpLink &document,
                            const QString &keyword);
